Revision history for SNMP-Effective

1.08
       * Fix rename attribute in SNMP::Effective::Host: sesssion != session
       * Change locking to pipe(...)
       * Change remove perlcritic test
       * Change SNMP::Effective::Logger is replaced with SNMP_EFFECTIVE_DEBUG
         and warn()
       * Reformatted code and add more documentation

1.07     Sat Jun 19 14:09:52 CEST 2010
       * Clean up 1.06_02 (not a dev release)
       * Clean up repository

1.06     Thu, 17 Apr 2008 16:00:00 +0100
       * Added new locking mechanism
       * You don't need Log::Log4perl, though it is highly suggested

1.05     Thu, 11 Oct 2007 20:15:00 +0200
       * Fixed typo which makes it difficult to install the module:
         Log::Log4Perl = Log::Log4perl

1.04     Sat, 29 Sep 2007 15:20:00 +0200
       * IMPORTANT! Renamed getnext to walk
       * Added getnext, the way it's expected to behave
       * Renamed more ::Host methods
       * Fixed bug in BEGIN blocks: You can now set values that is "" or 0
       * Split the namespaces into each seperate file and added more POD
       * added heap() to ::Host, read the POD for more info

1.03     Mon, 24 Sep 2007 23:14:00 +0200
       * Renamed methods to follow an uniform standard:
         * make_name_oid
         * make_numeric_oid
         * match_oid
       * Added support for Log4perl. The old DEBUG is deprecated
       * t/*tests* works for the first time

1.02     Fri, 21 Sep 2007 16:24:00 +0100
         <oliver.gorwits@oucs.ox.ac.uk>
       * Improve alarm handling in SNMP::Effective::new
       * PUSH in SNMP::Effective::VarList must take a list
       * Fix version number in POD
       * Improve documentation

1.01    Sun, 16 Sep 2007 13:30:58 +0200
       * First version, after pulling together what thought to be lost.
